# cider-swiftui

./: .gitignore  .periphery.yml  Brewfile  Brewfile.lock.json  CLAUDE_REVIEW.md  ExportOptions.plist  Gemfile  LICENSE  Podfile  README.md  Taskfile.yml  coke.json  swift-precompiled.toml
.github/workflows/: ci.yml
Cider/: AppMenu.swift  AppWindow.swift  Cider-Bridging-Header.h  Cider.entitlements  CiderApp.swift  CiderDebug.entitlements  ContentView.swift  Info.plist  main.swift
Cider.xcodeproj/: project.pbxproj
Cider.xcworkspace/: contents.xcworkspacedata
Cider/API/: EditorialArtwork.swift  MediaAny.swift  MediaAppleCurator.swift  MediaArtist.swift  MediaArtwork.swift  MediaBrowseData.swift  MediaDescription.swift  MediaEditorialNotes.swift  MediaItem.swift  MediaLibraryArtist.swift  MediaPlaylist.swift  MediaRadioData.swift  MediaRecommendation.swift  MediaStation.swift  MediaTrack.swift  MediaType.swift  MusicArtwork.swift  MusicItem.swift  MusicRecommendation.swift  PlayParams.swift  SearchResults.swift  SearchSuggestions.swift
Cider/Extensions/: Array.swift  Bundle.swift  CaseIterable.swift  Collection.swift  Color.swift  Comparable.swift  Defaults.swift  Dictionary.swift  Double.swift  List.swift  (+14 more)
CiderDevServer/: package.json
CiderDevUtils/: .gitignore  package.json  tsconfig.json
CiderElevationHelper/: CiderElevationHelper-Bridging-Header.h  CiderElevationHelper.swift  CiderElevationHelperCommandSet.swift  CiderElevationHelperProtocol.swift  Info.plist  main.swift
CiderPlaybackAgent/: CiderPlaybackAgent-Bridging-Header.h  Helper.h  Helper.m  Info.plist  MusicKitWorker.swift  Validation.swift  main.swift
CiderUpdateService/: CiderUpdateService.swift  CiderUpdateServiceProtocol.swift  main.swift
CiderWebAuth/: .gitignore  package.json  tsconfig.json
CiderWebModules/: .eslintrc.json  .gitignore  README.md  build.ts  bun.lockb  index.html  package.json  plutil  tailwind.config.ts  tsconfig.json  tsconfig.node.json  ui.config.json  ui.preset.js  vite.config.ts
CiderWebUI/: .gitignore  README.md  build.ts  package.json  tsconfig.node.json  vite.config.ts
DiscordRPCAgent/: .gitignore  Cargo.toml  build.sh
DiscordRPCAgent/src/: lib.rs
NativeUtils/: .gitignore  CMakeLists.txt  Cargo.toml  build.rs  build.sh
NativeUtils/cxx/: main.cpp
NativeUtils/src/: discord_rpc.rs  lib.rs  main.rs  native_utils.rs
Scripts/: build_auth_scripts.py  build_discord_rpc_lib.py  build_pb_scripts.py
assets/: bg.tiff  icon.icns
ci_scripts/: ci_post_clone.sh
patches/: SDWebImage+5.14.2.diff  Swifter+1.5.0.diff  SwiftyUtils+5.2.0.diff
(+183 files in other folders)
