[package]
name = "discord-rpc-agent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
build = "build.rs"

[dependencies]
swift-bridge = "0.1.49"
discord-rpc-client = "0.3.0"

[build-dependencies]
swift-bridge-build = "0.1.49"

[lib]
crate-type = ["staticlib"]
