[package]
name = "native-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
swift-bridge = "0.1.49"
discord-rpc-client = "0.3.0"
roxmltree = "0.18.0"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }

[build-dependencies]
swift-bridge-build = "0.1.49"

[lib]
name = "native_utils"
crate-type = ["staticlib"]
path = "src/lib.rs"

[[bin]]
name = "native-utils-playground"
path = "src/main.rs"
