[package]
name = "native-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

build = "build.rs"

[dependencies]
swift-bridge = "0.1.52"
roxmltree = "0.18.0"
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
cli-clipboard = "0.4.0"
port_scanner = "0.1.5"
discord-presence = "0.5.18"

[build-dependencies]
swift-bridge-build = "0.1.52"

[lib]
name = "native_utils"
crate-type = ["staticlib"]
path = "src/lib.rs"

[[bin]]
name = "native-utils-playground"
path = "src/main.rs"
